tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__UsingthatAlgae-eur7SqfIT8GEE_NxscJj8Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12090000893005685745,
  "prerequisites": [
    2397,
    16740244179246120339
  ],
  "properties": {
    "auto_claim": false,
    "desc": "So you've created the Chemical Plant, and an Algae Farm, excellent! Time to make some use of it instead of letting it sit there collecting. There's quite a few recipes you can make with Algae, but we'll start with a more simple one.\n\nFor this you'll need some Brown Algae and some Green Algae. This means you need at minimum HV machine casings for the bottom of the Algae Farm. HV will produce up to 8 brown algae every 35 seconds, but can at worst case produce 2 in 105 seconds, while EV will produce at best 20 every 30 seconds, and at worst 12 in 90 seconds.\n\nOnce you have some Green and Brown Algae, you'll have to put them in a tier 2 Chemical Plant (steel based) with some distilled water, and you'll get back Sulfuric Acid. Cheap to produce once you have it all set up, a bit expensive to get there though! There's another Sulfuric acid recipe you can use as well later on, but it'll cost higher tier Algae and a higher tier Chemical Plant.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Using that Algae",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2397,
    16740244179246120339
  ],
  "rewards": [],
  "tasks": []
}
