tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__YouAreNotPrepare-AAAAAAAAAAAAAAAAAAAL1w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3031,
  "optional_prerequisites": [
    18,
    2985
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "It's time for something really big: A smeltery! There's a lot to craft, so better gather some resources... or you could go try complete this with the help of some unhappy NPC friends, but that would void your quest rewards.\n\n[note]Note: This quest is mutually exclusive with the other smeltery quest.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lYou Are Not Prepared!!!",
    "party_single_reward": null,
    "quest_logic": "XOR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
