tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__YouAreNowPrepare-AAAAAAAAAAAAAAAAAAAASg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 74,
  "optional_prerequisites": [
    3031,
    2985
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "No matter where you got this smeltery from, you have one now. Time for some casting!\n\nBuy the zinc gravel in the Coins Coins coins tab if you can't find it.\n\nNote: The book says a 3x3 base, but you can make a smeltery with a smaller base. Taller/wider smelteries can do more items at one time, conserving fuel.\n\n[note]The smeltery does not double ores in GTNH. Later machines will help you there.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§6§lYou Are Now Prepared, Hopefully!",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
