tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__YourNewFriend-AAAAAAAAAAAAAAAAAAAMEQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3089,
  "prerequisites": [
    77
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's painful to carry all the tools in your inventory. You can put GT tools and soldering into IC2 Toolbox to save space for inventory.\n\nYou can also use it to do maintenance, without taking out tools. Just hold toolbox and right-click the Maintenance Hatch. Now who needs duct tape? You. It is needed to automate maintenance later.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lYour New Friend",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    77
  ],
  "rewards": [],
  "tasks": []
}
